--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom horizontal scroll for trending section */
+.h-scroll::-webkit-scrollbar {
+  border-radius: 10px;
+  height: 8px;
+  width: 8px;
+}
+.h-scroll::-webkit-scrollbar-thumb:horizontal {
+  background: #5a698f; /* app-greyish-blue */
+  border-radius: 10px;
+}
